--- a/src/Parquet.CLI/Help.resx
+++ b/src/Parquet.CLI/Help.resx
@@ -120,6 +120,9 @@
   <data name="Argument_Path" xml:space="preserve">
     <value>Path to parquet file.</value>
   </data>
+  <data name="Command_Convert_Description" xml:space="preserve">
+    <value>Converts between file formats. Currently supports conversion from parquet to json only.</value>
+  </data>
   <data name="Command_Head_Description" xml:space="preserve">
     <value>Displays first N rows of a parquet file.</value>
   </data>
